--- a/style.css
+++ b/style.css
@@ -29,8 +29,8 @@ h1 {
 .progress--bar {
     background-color: #00FF00;
     height: 100%;
-    /* width: 10%; */
     transition: all ease .5s;
+
 }
 
 .questionArea,
@@ -47,8 +47,9 @@ h1 {
     color: #FFF;
     font-size: 18px;
     margin: 20px 0;
+    
 }
-.options {
+.option {
     display: flex;
     align-items: center;
     height: 40px;
@@ -59,7 +60,7 @@ h1 {
     font-size: 16px;
     cursor: pointer;
 }
-.options span {
+.option span {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -71,7 +72,7 @@ h1 {
     background-color: rgba(0, 0, 0, 0.8);
     color: #555;
 }
-.options:hover {
+.option:hover {
     background-color: rgba(0, 0, 0, 0.2);
 }
 
@@ -103,6 +104,7 @@ h1 {
     font-size: 16px;
     color: #000;
     margin-bottom: 10px;
+    font-weight: bold;
 }
 
 .scoreArea button {
